--- a/package.json
+++ b/package.json
@@ -16,8 +16,13 @@
     "@monaco-editor/react": "^4.6.0",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.3",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.1",
+    "sort-by": "^1.2.0",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
